--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4848,6 +4848,7 @@ select::-ms-expand {
 
 .c-project__excerpt {
   background-color: #FFF;
+  margin-top: 0;
   padding: 0.75em;
   text-align: center;
   position: relative; }
